--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -47,9 +47,14 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
             <groupId>fr.inria.jtravis</groupId>
             <artifactId>jtravis</artifactId>
-            <version>1.0</version>
+            <version>1.1</version>
         </dependency>
         <dependency>
             <groupId>com.martiansoftware</groupId>
