--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>fr.inria.spirals</groupId>
-    <artifactId>repairnator</artifactId>
+    <groupId>fr.inria.repairnator</groupId>
+    <artifactId>repairnator-root</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
