--- a/repairnator/repairnator-checkbranches/pom.xml
+++ b/repairnator/repairnator-checkbranches/pom.xml
@@ -3,8 +3,8 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>repairnator</artifactId>
-        <groupId>fr.inria.spirals</groupId>
+        <artifactId>repairnator-root</artifactId>
+        <groupId>fr.inria.repairnator</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -19,7 +19,7 @@
             <version>8.1.2</version>
         </dependency>
         <dependency>
-            <groupId>fr.inria.spirals</groupId>
+            <groupId>fr.inria.repairnator</groupId>
             <artifactId>repairnator-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
