--- a/repairnator/repairnator-dockerpool/pom.xml
+++ b/repairnator/repairnator-dockerpool/pom.xml
@@ -20,7 +20,7 @@
         </dependency>
         <dependency>
             <groupId>fr.inria.repairnator</groupId>
-            <artifactId>repairnator-root</artifactId>
+            <artifactId>repairnator-core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
