--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -99,7 +99,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <maven-jacoco-plugin.version>0.7.5.201505241946</maven-jacoco-plugin.version>
+        <maven-jacoco-plugin.version>0.7.9</maven-jacoco-plugin.version>
         <maven-coveralls-plugin.version>4.0.0</maven-coveralls-plugin.version>
     </properties>
 
@@ -118,7 +118,7 @@
         <dependency>
             <groupId>fr.inria.jtravis</groupId>
             <artifactId>jtravis</artifactId>
-            <version>2.1-SNAPSHOT</version>
+            <version>2.1</version>
         </dependency>
         <dependency>
             <groupId>com.martiansoftware</groupId>
