--- a/repairnator/pom.xml
+++ b/repairnator/pom.xml
@@ -118,7 +118,7 @@
         <dependency>
             <groupId>fr.inria.jtravis</groupId>
             <artifactId>jtravis</artifactId>
-            <version>2.1</version>
+            <version>2.2-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.martiansoftware</groupId>
